fixed about spacing

--- a/src/Responsive.scss
+++ b/src/Responsive.scss
@@ -109,6 +109,10 @@
   .tab-content {
     padding: 30px;
   }
+  .about{
+    max-width: 800px;
+    margin: auto;
+  }
 }
 
 @media screen and (max-width: 950px) {
